TP-3391: fix for body text wrapping aroudn pull quotes

--- a/drupal/sites/all/themes/fresh/sass/article.scss
+++ b/drupal/sites/all/themes/fresh/sass/article.scss
@@ -91,3 +91,7 @@ h1.title{
   text-align: right;
   padding-left: 0;
 }
+blockquote.pullquote {
+  margin: 0;
+  padding: 0;
+}
